--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -18,7 +18,7 @@
 
   <% if @pinsaccepted.first %>
   <p><b>Accepted</b></p>
-  <p>You have accepted an early payment on below invoices:</p>
+  <p>You have accepted early payment offers on the below invoice(s):</p>
   <table class="table table-hover table-bordered table-striped invtable">
     <thead>
       <tr>
@@ -26,31 +26,31 @@
         <th><%= sortable "description", "Description" %></th>
         <th><%= sortable "invoice_date", "Invoice Date" %></th>
         <th><%= sortable "due_date", "Old Due Date" %></th>
-        <th><%= sortable "invoice_curr", "Invoice Currency" %></th>
+        <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
         <th><%= sortable "invoice_amount", "Old Invoice Amount" %></th>
-        <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
-        <th><%= sortable "status", "Offer Status" %></th>
-        <th><%= sortable "prop_settlement_date", "New Settlement Date" %></th>
-        <th><%= sortable "offer_amount", "New Invoice Amount" %></th>
-        <th><%= sortable "saving", "Money Saved" %></th>
-        <th><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
+        <th class='darkhead'><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
+        <th class='darkhead'><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
+        <!-- <th><%#= sortable "status", "Offer Status" %></th> -->
+        <th class='darkhead'><%= sortable "prop_settlement_date", "New Settlement Date" %></th>
+        <th class='darkhead'><%= sortable "offer_amount", "New Invoice Amount" %></th>
+        <!-- <th><%#= sortable "saving", "Money Saved" %></th> -->
       </tr>
     </thead>
     <tbody>
       <% @pinsaccepted.each do |pin| %>
         <tr>
-          <th class="middle"><%= pin.invoice_number %></th>
+          <th class="middle thin"><%= pin.invoice_number %></th>
           <th class="left"  ><%= pin.description %></th>
-          <th class="middle"><%= date(pin.invoice_date) %></th>
-          <th class="middle"><%= date(pin.due_date) %></th>
-          <th class="middle"><%= pin.invoice_curr %></th>
-          <th class="right" ><%= currency(pin.invoice_amount) %></th>
-          <th class="middle"><%= date(pin.offer_sent_date) %></th>
-          <th class="middle"><%= pin.status %></th>
-          <th class="middle"><%= date(pin.prop_settlement_date) %></th>
-          <th class="right" ><%= currency(pin.offer_amount) %></th>
-          <th class="right" ><%= currency(pin.saving) %></th>
-          <th class="middle"><%= date(pin.offer_accepted_date) %></th>
+          <th class="middle date"><%= date(pin.invoice_date) %></th>
+          <th class="middle date"><%= date(pin.due_date) %></th>
+          <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
+          <th class="right currency"><%= currency(pin.invoice_amount) %></th>
+          <th class="middle date"><%= date(pin.offer_sent_date) %></th>
+          <th class="middle date"><%= date(pin.offer_accepted_date) %></th>
+          <!-- <th class="middle"><%#= pin.status %></th> -->
+          <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
+          <th class="right currency" ><%= currency(pin.offer_amount) %></th>
+          <!-- <th class="right" ><%#= currency(pin.saving) %></th> -->
         </tr>
       <% end %>  
     </tbody>
@@ -58,10 +58,12 @@
     <div class="center">
      <%= will_paginate @pinsaccepted, renderer: BootstrapPagination::Rails %>
     </div>
+    <br>
+    <% if !@pinsrejected.first%>
+      <p>If you have any questions please get in touch: <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
+    <% end %>
+    <br><br>
   <% end %>
-
-  <br>
-  <br><br>
 
   <% if @pinsrejected.first %>
     <p><b>Rejected/Expired</b></p>
@@ -73,31 +75,31 @@
           <th><%= sortable "description", "Description" %></th>
           <th><%= sortable "invoice_date", "Invoice Date" %></th>
           <th><%= sortable "due_date", "Due Date" %></th>
-          <th><%= sortable "invoice_curr", "Invoice Currency" %></th>
+          <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
           <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
-          <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
-          <th><%= sortable "status", "Offer Status" %></th>
-          <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
-          <th><%= sortable "offer_amount", "Offered Amount" %></th>
-          <th><%= sortable "saving", "Money Saved" %></th>
-          <th><%= sortable "offer_accepted_date", "Offer Response/Expired Date" %></th>
+          <th class='darkhead'><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
+          <th class='darkhead'><%= sortable "status", "Offer Response" %></th>
+          <th class='darkhead'><%= sortable "offer_accepted_date", "Offer Response/Expired Date" %></th>
+          <th class='darkhead'><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
+          <th class='darkhead'><%= sortable "offer_amount", "Offered Amount" %></th>
+          <!-- <th><%#= sortable "saving", "Money Saved" %></th> -->
         </tr>
       </thead>
       <tbody>
         <% @pinsrejected.each do |pin| %>
           <tr>
-            <th class="middle"><%= pin.invoice_number %></th>
+            <th class="middle thin"><%= pin.invoice_number %></th>
             <th class="left"  ><%= pin.description %></th>
-            <th class="middle"><%= date(pin.invoice_date) %></th>
-            <th class="middle"><%= date(pin.due_date) %></th>
-            <th class="middle"><%= pin.invoice_curr %></th>
-            <th class="right" ><%= currency(pin.invoice_amount) %></th>
-            <th class="middle"><%= date(pin.offer_sent_date) %></th>
-            <th class="middle"><%= pin.status %></th>
-            <th class="middle"><%= date(pin.prop_settlement_date) %></th>
-            <th class="right" ><%= currency(pin.offer_amount) %></th>
-            <th class="right" ><%= currency(pin.saving) %></th>
-            <th class="middle"><%= date(pin.offer_accepted_date) %></th>
+            <th class="middle date"><%= date(pin.invoice_date) %></th>
+            <th class="middle date"><%= date(pin.due_date) %></th>
+            <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
+            <th class="right currency" ><%= currency(pin.invoice_amount) %></th>
+            <th class="middle date"><%= date(pin.offer_sent_date) %></th>
+            <th class="middle thin"><%= pin.status %></th>
+            <th class="middle date"><%= date(pin.offer_accepted_date) %></th>
+            <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
+            <th class="right currency" ><%= currency(pin.offer_amount) %></th>
+            <!-- <th class="right" ><%#= currency(pin.saving) %></th> -->
           </tr>
         <% end %>  
       </tbody>
@@ -106,8 +108,9 @@
      <%= will_paginate @pinsrejected, renderer: BootstrapPagination::Rails %>
     </div>
     <br>
-    <p>If you'd like a new offer on any rejected/expired invoices please email us <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
+    <p>If you'd like a new offer on any rejected/expired invoices please get in touch: <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
   <% end %>
+  <br><br><br><br>
 </div>
 
 
