--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -60,6 +60,12 @@ $jumbotron-bg:                    white;
 	color: #424242;
 	font-size: 15px;
 
+	.enterbtn{
+		width: 230px;
+  	height: 75px;
+  	font-size: 37px;
+	}
+
 	.welcometitle h1{
 		font-size: 55px;
 		margin: 30px 0px 30px 0px;
@@ -67,6 +73,10 @@ $jumbotron-bg:                    white;
 
 	.tablink{
 		font-weight: 700;
+	}
+
+	#markAllAccepted{
+		background-color: #7EB5B6;
 	}
 }
 
