--- a/app/views/pins/_accept_reject_form.html.erb
+++ b/app/views/pins/_accept_reject_form.html.erb
@@ -4,7 +4,7 @@
     <%= radio_button_tag("pins[#{pin.id}]", "Accept") %> Accept
   </label>
   <label class="btn btn-default btn-no" id='Reject'>
-		<%= radio_button_tag("pins[#{pin.id}]", "Reject") %> Reject
+		<%= radio_button_tag("pins[#{pin.id}]", "Rejected") %> Reject
   </label>
 </div>
 
