--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -175,7 +175,7 @@
       for( x = 0; x < radios2.length; x++ ) {
         if( radios2[x].checked ) {
           totalNumberOfCheckedButtons ++
-          if (radios2[x].value == 'Accept'){
+          if (radios2[x].value == 'Accepted'){
             var num = radios2[x].name.replace(/^\D+|\D+$/g, "")  
             acceptedPins[i] = num
           }
