--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -2,14 +2,7 @@
   <%= render 'layouts/dashboardpages' %>
 </div>
 
-
-
-<br><br>
-
-<br><br>
-
-
-
+<br><br><br><br>
 
 <table class="table table-hover table-bordered table-striped invtable">
   <thead>
@@ -40,12 +33,9 @@
   </tbody>
 </table>
 
-<br><br>
-
-
-<br><br>
+<br>
 
 <div class="center">
-   <%#= will_paginate @users, renderer: BootstrapPagination::Rails %>
+   <%= will_paginate @users, renderer: BootstrapPagination::Rails %>
 </div>
 
