--- a/app/views/pins/all_invoices.html.erb
+++ b/app/views/pins/all_invoices.html.erb
@@ -7,7 +7,7 @@
 
 <br><br>
 
-<table class="table table-hover table-bordered table-striped invtable">
+<table class="table table-hover table-bordered table-striped invtable" style='font-size: 10px;'>
   <thead>
     <tr>
       <!-- <th><%#= check_box_tag "select_all" %></th> -->
